--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Gummy Bear Kingdom</h1>
 
 <% if @products %>
-  <h1>Products</h1>
+  <h2>All Products</h2>
 
   <div>
     <% @products.order(:price).each do |product| %>
@@ -11,21 +11,31 @@
 
 <% elsif @product %>
 <div>
-  <h1><%= @product.name %></h1>
+  <h2><%= @product.name %></h2>
     <p><%= @product.price %></p>
     <p><%= @product.country %></p>
 </div>
-<%= link_to "Back to all products", products_path %>
-
+<p><%= link_to "Edit", edit_product_path(@product) %> | <%= link_to "Delete", product_path(@product),
+                    :data => {:confirm => 'For shursies?',
+                              :method => 'delete'} %></p>
 <% elsif @new_product %>
+<h2>Add a Product</h2>
 <div class="row">
+  <%= render 'layouts/errors', :object => @new_product %>
   <%= render 'form' %>
 </div>
+
+<% elsif @edit_product %>
+  <h2>Edit <%= @edit_product.name %></h2>
   <div class="row">
-    <%= link_to "Back to all products", products_path %>
+    <%= render 'layouts/errors', :object => @edit_product %>
+    <%= render 'form' %>
   </div>
 <% end %>
 
 <div class="links">
+  <% unless @products %>
+  <%= link_to "Back to all products", products_path %>
+  <% end %>
   <%= link_to "Add a product", new_product_path %>
 </div>
