--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,11 @@
 
   <body>
     <% flash.each do |key, value| %>
-      <div class="<%= flash_class(key) %>" role="alert">
-          <%= value %>
+      <div class="<%= flash_class(key) %>" role="alert" >
+        <!-- <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button> -->
+        <%= value %>
       </div>
     <% end %>
     <div class="container">
