--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,6 +6,7 @@
   <div>
     <% @products.order(:price).each do |product| %>
       <p><%= link_to product.name, product_path(product) %></p>
+      <%= link_to image_tag(product.image.url(:thumb), class: 'img-circle'), product_path(product) %>
     <% end  %>
   </div>
 
@@ -14,6 +15,8 @@
   <h2><%= @product.name %></h2>
     <p><%= @product.price %></p>
     <p><%= @product.country %></p>
+    <%= image_tag @product.image.url(:medium) %>
+
 </div>
 <p><%= link_to "Edit", edit_product_path(@product) %> | <%= link_to "Delete", product_path(@product),
                     :data => {:confirm => 'For shursies?',
