--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -12,10 +12,11 @@
       <span class="input-group-addon"><%= f.label :country %></span>
       <%= f.text_field :country, class: 'form-control' %>
     </div>
-    <div class="field">
+    <div class="input-group">
     <%= f.label :image %>
     <%= f.file_field :image %>
   </div>
+  <hr>
 
     <%= f.submit class: 'btn btn-primary'%>
   <% end %>
