--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,13 +2,14 @@
 
 <% if @products %>
   <h2>All Products</h2>
-
-  <div>
+<div class="row">
     <% @products.order(:price).each do |product| %>
+    <div class="col-sm-2 well product">
       <p><%= link_to product.name, product_path(product) %></p>
       <%= link_to image_tag(product.image.url(:thumb), class: 'img-circle'), product_path(product) %>
+    </div>
     <% end  %>
-  </div>
+</div>
 
 <% elsif @product %>
 <div>
@@ -16,11 +17,12 @@
     <p><%= @product.price %></p>
     <p><%= @product.country %></p>
     <%= image_tag @product.image.url(:medium) %>
-
 </div>
-<p><%= link_to "Edit", edit_product_path(@product) %> | <%= link_to "Delete", product_path(@product),
-                    :data => {:confirm => 'For shursies?',
-                              :method => 'delete'} %></p>
+  <div class="row links">
+  <h3><%= link_to "Edit", edit_product_path(@product) %> | <%= link_to "Delete", product_path(@product),
+                      :data => {:confirm => 'For shursies?',
+                                :method => 'delete'} %></h3>
+  </div>
 <% elsif @new_product %>
 <h2>Add a Product</h2>
 <div class="row">
@@ -34,9 +36,11 @@
   </div>
 <% end %>
 
-<div class="links">
-  <% unless @products %>
-  <%= link_to "Back to all products", products_path %>
-  <% end %>
-  <%= link_to "Add a product", new_product_path %>
+<div class="links row">
+  <h3><%= link_to "Add a product", new_product_path %>
+    <% unless @products %>
+    | <%= link_to "Back to all products", products_path %>
+    <% end %>
+  </h3>
+
 </div>
