--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,8 @@
   </head>
 
   <body>
-    <div class="navbar">
-      <nav class="navbar navbar-default">
+    <!-- <div class="navbar"> -->
+      <nav class="navbar">
         <div class="container-fluid">
           <!-- Brand and toggle get grouped for better mobile display -->
           <div class="navbar-header">
@@ -33,12 +33,9 @@
           </div>
         </div>
       </nav>
-    </div>
+    <!-- </div> -->
     <% flash.each do |key, value| %>
       <div class="<%= flash_class(key) %>" role="alert" >
-        <!-- <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button> -->
         <%= value %>
       </div>
     <% end %>
